compiler/lume_hir/src/snapshots/lume_hir__lower__tests__doc_comments_snapshots@type_alias.snap
---
source: compiler/lume_hir/src/lower.rs
expression: "lower(r#\"/// This is a doc comment\n                type Foo = Bar\"#)"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        18213876290066861800: Type(
            Alias(
                AliasDefinition {
                    id: 18213876290066861800,
                    type_id: None,
                    name: 'Foo',
                    definition: Type {
                        name: 'Bar',
                        type_params: [],
                        location: <internal>:53:56,
                    },
                    location: <internal>:42:56,
                },
            ),
        ),
    },
    statements: {},
    expressions: {},
}
