compiler/lume_hir/src/snapshots/lume_hir__lower__tests__enum_snapshots@variant_param_multiple.snap
---
source: compiler/lume_hir/src/lower.rs
expression: "lower(r#\"\n                enum Foo {\n                    Bar(int, int)\n                }\"#)"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        18213876290066861800: Type(
            Enum(
                EnumDefinition {
                    id: 18213876290066861800,
                    type_id: None,
                    name: 'Foo',
                    cases: [
                        EnumDefinitionCase {
                            id: 3235109210342419196,
                            name: 'Bar',
                            parameters: [
                                Type {
                                    name: 'int',
                                    type_params: [],
                                    location: <internal>:52:55,
                                },
                                Type {
                                    name: 'int',
                                    type_params: [],
                                    location: <internal>:57:60,
                                },
                            ],
                            location: <internal>:48:61,
                        },
                    ],
                    location: <internal>:17:79,
                },
            ),
        ),
    },
    statements: {},
    expressions: {},
}
