compiler/lume_hir/src/snapshots/lume_hir__lower__tests__function_definition_snapshots@external.snap
---
source: compiler/lume_hir/src/lower.rs
description: fn external main() -> void
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        15299231299772503292: Function(
            FunctionDefinition {
                id: 15299231299772503292,
                func_id: None,
                visibility: Private,
                name: main,
                parameters: [],
                type_parameters: [],
                return_type: Some(
                    Type {
                        name: void,
                        type_params: [],
                        location: <internal>:22:26,
                    },
                ),
                block: None,
                location: <internal>:0:26,
            },
        ),
    },
    statements: {},
    expressions: {},
}
