compiler/lume_hir/src/snapshots/lume_hir__lower__tests__function_definition_snapshots@no_return_type.snap
---
source: compiler/lume_hir/src/lower.rs
expression: "lower(\"fn main() {}\")"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        15299231299772503292: Function(
            FunctionDefinition {
                id: 15299231299772503292,
                func_id: None,
                visibility: Private,
                name: 'main',
                parameters: [],
                type_parameters: [],
                return_type: None,
                block: Block {
                    statements: [],
                    location: <internal>:10:12,
                },
                location: <internal>:0:12,
            },
        ),
    },
    statements: {},
    expressions: {},
}
